// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty default 1`] = `
"/**
 * The value
 *
 * @default 'type' name description
 */
"
`;

exports[`Empty default 2`] = `
"/**
 * The value
 *
 * @default
 */
"
`;
